@@ -1,3 +1,8 @@
+2004-12-14 06:30 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormClassEditor.m: Corrected potential issue after delete
+	of a class which is selected.
+
 2004-12-14 06:04 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormClassEditor.m: Added code in -deleteSelection to copy the 
